--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,34 @@
   <version>1.0-SNAPSHOT</version>
   <name>LHelloworld</name>
   <url>http://maven.apache.org</url>
+   <build>
+  <plugins>
+    
+     <plugin>
+    <artifactId>maven-assembly-plugin</artifactId>
+    <executions>
+      <execution>
+        <phase>package</phase>
+        <goals>
+          <goal>single</goal>
+        </goals>
+      </execution>
+    </executions>
+    <configuration>
+      <archive>
+        <manifest>
+          <addClasspath>true</addClasspath>
+          <mainClass>com.excers.App</mainClass>
+        </manifest>
+      </archive>
+      <descriptorRefs>
+        <descriptorRef>jar-with-dependencies</descriptorRef>
+      </descriptorRefs>
+    </configuration>
+  </plugin> 
+   
+  </plugins>
+</build>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -15,4 +43,5 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+ 
 </project>
